# waypoint

./: .gitignore  AGENTRELAY_ARCHITECTURE_SUMMARY.md  AGENTRELAY_TECHNICAL_DESIGN.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: dev-with-bundle.js
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs  pty_manager.rs
src/api/: tauri.ts
src/components/: TerminalView.tsx  WptLogo.tsx
