[package]
name = "agent-relay"
version = "0.1.0"
description = "Local agent session router"
authors = ["AgentRelay"]
edition = "2021"

[lib]
name = "agent_relay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
parking_lot = "0.12"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }

