[package]
name = "waypoint"
version = "0.1.0"
description = "Local agent session router"
authors = ["waypoint"]
edition = "2021"

[lib]
name = "waypoint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.21"
parking_lot = "0.12"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.14"
